@@ -1,3 +1,8 @@
+2004-01-19  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* coff-h8300.c: Add and adjust comments about relaxation.
+	* elf32-h8300.c: Likewise.
+
 2004-01-16  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* coff-h8300.c: Fix comment typos.
